# zed

./: .gitignore  .rules  Cargo.toml  EXTENSION_API_IMPLEMENTATION.md
crates/acp_thread/src/: acp_thread.rs  terminal.rs
crates/agent_ui/src/: agent_panel.rs  connection_view.rs  message_editor.rs  text_thread_history.rs  thread_history.rs
crates/cloud_api_types/src/: extension.rs
crates/command_palette/: Cargo.toml
crates/command_palette/src/: command_palette.rs
crates/command_palette_hooks/src/: command_palette_hooks.rs
crates/extension/src/: extension_manifest.rs
crates/extension_api/: Cargo.toml
crates/extension_api/src/: extension_api.rs  ui.rs
crates/extension_cli/src/: main.rs
crates/extension_host/: Cargo.toml
crates/extension_host/benches/: extension_compilation_benchmark.rs
crates/extension_macros/: Cargo.toml
crates/extension_panel/: Cargo.toml
crates/extension_panel/src/: event_handlers.rs  extension_panel.rs  ui_renderer.rs  wit_types.rs
crates/git/src/: repository.rs
crates/zed/: Cargo.toml
docs/: agent-panel-drag-to-center.md  agent-panel-single-pane-analysis.md  extension-gui-panel-integration-plan.md  extension-gui-plan.md  gui-extension-error-analysis.md  gui-extension-fix-summary.md
docs/plans/: 2026-03-12-extension-commands-design.md  2026-03-12-extension-commands-impl.md  2026-03-12-wit-gpui-extension-ui.md
extensions/gui-test/: Cargo.toml  extension.toml  manifest.json
extensions/outline-test/: Cargo.toml  extension.toml  manifest.json
extensions/project-test/: Cargo.toml  extension.toml  manifest.json
(+28 files in other folders)
