[package]
name = "extension_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/extension_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
command_palette_hooks.workspace = true
schemars.workspace = true
collections.workspace = true
extension_host.workspace = true
futures.workspace = true
gpui.workspace = true
log.workspace = true
project.workspace = true
serde.workspace = true
serde_json.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
